--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
+[submodule "api"]
+	path = api
+	url = git@github.com:ivnminin/indexer-event.git
 [submodule "contracts"]
 	path = contracts
 	url = git@github.com:ivnminin/market-place.git
-[submodule "api"]
-	path = api
-	url = https://github.com/ivnminin/indexer-event
