--- a/api_v2/requirements.txt
+++ b/api_v2/requirements.txt
@@ -1,15 +1,23 @@
 anyio==3.6.2
 asyncpg==0.27.0
+certifi==2022.12.7
+charset-normalizer==2.1.1
 click==8.1.3
 databases==0.7.0
 fastapi==0.88.0
 FastAPI-SQLAlchemy==0.2.1
 h11==0.14.0
 idna==3.4
+numpy==1.24.1
+Pillow==9.3.0
 psycopg2-binary==2.9.5
 pydantic==1.10.2
+requests==2.28.1
 sniffio==1.3.0
 SQLAlchemy==1.4.45
 starlette==0.22.0
+torch==1.13.1
+torchvision==0.14.1
 typing_extensions==4.4.0
+urllib3==1.26.13
 uvicorn==0.20.0
